syntax = "proto3";

package com.hmproductions.bingo.models;
option java_multiple_files = true;

message GameSubscription {

    uint32 room_id = 1;
    uint32 player_id = 2;
    uint32 cell_clicked = 3;
    uint32 winner_id = 4;
    bool first_subscription = 5;
}